<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickDraw</string>
    <string name="menu_settings">Settings</string>
    <string name="start_game">Start Game</string>
    <string name="new_user">New User</string>
    <string name="create_new_user">Create</string>
    <string name="cancel_new_user">Cancel</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_player1">Player 1</string>
    <string name="hint_player2">Player 2</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="button_color">Color</string>
    <string name="button_pencil">Pencil</string>
    <string name="button_eraser">Eraser</string>
    <string name="text_category">Category:</string>
    <string name="button_done">Done</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_color_select">ColorSelectActivity</string>
    <string name="text_start">Enter Player Account:</string>
    <string name="text_new_user_menu">Create Player Account:</string>
    <string name="text_scoreP1">Player 1:</string>
    <string name="text_scoreP2">Player 2:</string>
    <string name="title_activity_edit">Project 1</string>
    <string name="title_activity_guess">GuessActivity</string>
    <string name="text_time">Time:</string>
    <string name="text_hint">Enter Guess</string>
    <string name="text_done">Nice drawing!</string>
    <string name="text_instruction">Now, tell us about it:</string>
    <string name="text_tip">Tip</string>
    <string name="text_answer">Answer</string>
    <string name="text_tip_guess">Tip:</string>
    <string name="text_answer_guess">Answer:</string>
    <string name="title_activity_complete">CompleteActivity</string>
    <string name="title_activity_done">DoneActivity</string>
    <string name="title_activity_dialog_done">DialogDoneActivity</string>
    <string name="plane_description">Quick Draw main page image</string>
    <string name="text_winner">Congratulations, you won!</string>
    <string name="text_restart">Restart</string>
    <string name="text_score">Final score:</string>
    <string name="title_activity_final">FinalActivity</string>
    <string name="game_over">Game Over!</string>
    <string name="winner_string">Player X Wins!</string>
    <string name="quit">Quit to Main?</string>
    <string name="how_to_play">How To Play</string>
    <string name="how_to_play_text">  \n Winning:\n\n
       
       The first player to 500 points wins. Points are awarded based on the time remaining on the clock.\n\n
        
        Gameplay:\n\n
        
        Player 1 always draws first.\n\n 
        
        The drawing player creates a drawing in the given category. Once they are finished, they press \'Done\' and supply the name of the drawing as well as 
        a hint for the other player. These must be entered for play to continue. Once this is complete, press \'Ok\' and pass to the guessing player.\n\n
        
        The guessing player has 2:20 to guess the correct answer. After 1:10, the previously entered hint appears. If the guessing player fails to correctly 
        guess the answer in the allotted time, no points are awarded. After time expires or the player guesses correctly, it is now their turn to draw.\n\n</string>
    <string name="new_game">New game</string>
    <string name="not_available">N/A</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="lobby_text">Please Wait While Opponent Is Found :)</string>
    <string name="title_activity_wait_turn">WaitTurnActivity</string>
    <string name="wait_turn_text">Please Wait Your Turn :)</string>

</resources>