<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editTextPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonStart"
        android:layout_alignLeft="@+id/editTextPlayer1"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/hint_player2"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPlayer2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/hint_player1"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:onClick="onStartGame"
        android:text="@string/start_game" />

    <TextView
        android:id="@+id/textViewPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPlayer1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/text_start"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>