<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_green"
    tools:context=".NewUserActivity" >
    
		<TextView
		    android:id="@+id/textViewPlayers"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_above="@+id/editTextPlayer1"
		    android:layout_centerHorizontal="true"
		    android:layout_marginBottom="10dp"
		    android:text="@string/text_new_user_menu"
		    android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextPlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonLayout"
            android:layout_alignLeft="@+id/editTextPlayer1"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" />

        <EditText
            android:id="@+id/editTextPlayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextPlayer2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" >

            <Button
                android:id="@+id/buttonCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="onCreateUser"
                android:text="@string/create_new_user" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:onClick="onCancel"
                android:text="@string/cancel_new_user" />

        </LinearLayout>

        <ImageView
            android:id="@+id/planeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewPlayers"
            android:layout_alignLeft="@+id/buttonLayout"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/plane_description"
            android:padding="20dp"
            android:src="@drawable/plane" />

</RelativeLayout>