<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessActivity" >

    <TextView
        android:id="@+id/textViewScoreP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewP1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textViewScoreP1"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="@string/text_scoreP1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewScoreP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewP2"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewP2"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewScoreP1"
        android:layout_toLeftOf="@+id/textViewScoreP1"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="@string/text_scoreP2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewP1"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textViewAnswer"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="@string/text_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewTimeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewP1"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textViewP1"
        android:layout_toRightOf="@+id/textViewTime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="@string/text_answer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewAnswer"
        android:layout_alignParentLeft="true"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="@string/text_tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTimeLeft"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/textViewAnswer"
        android:layout_toLeftOf="@+id/buttonDone"
        android:ems="10"
        android:hint="@string/text_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewHintDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewTip"
        android:layout_alignTop="@+id/buttonDone"
        android:layout_toLeftOf="@+id/buttonDone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="37dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="37dp"
        android:text="@string/button_done" />

</RelativeLayout>