<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalActivity" >

    <TextView
        android:id="@+id/textViewGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="@string/game_over"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/linearLayoutPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewGameOver"
        android:layout_alignRight="@+id/textViewGameOver"
        android:layout_below="@+id/textViewGameOver"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textViewPlayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_scoreP1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewPlayer1Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_scoreP2"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewGameOver"
        android:layout_alignRight="@+id/textViewGameOver"
        android:layout_below="@+id/linearLayoutPlayer1"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textViewPlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_scoreP2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewPlayer2Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_scoreP1"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonReplay"
        android:layout_below="@+id/linearLayoutPlayer2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/winner_string"
        android:textSize="60sp" />

    <Button
        android:id="@+id/buttonReplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onNewGame"
        android:layout_centerHorizontal="true"
        android:text="@string/new_game" />

</RelativeLayout>