<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_green"
    tools:context=".EditActivity" >

    <Button
        android:id="@+id/buttonDone"
        android:background="@android:drawable/btn_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/buttonPencil"
        android:onClick="onDone"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/button_done" />

    <Button
        android:id="@+id/buttonPencil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonEraser"
        android:background="@android:drawable/btn_default"
        android:onClick="onPencil"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/button_pencil" />

    <SeekBar
        android:id="@+id/seekBarEraser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonEraser"
        android:layout_toLeftOf="@+id/buttonDone"
        android:layout_toRightOf="@+id/buttonEraser"
        android:paddingTop="5dp"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/textViewCategoryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewP1"
        android:layout_alignParentTop="true"
        android:paddingBottom="15dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:layout_toLeftOf="@+id/textViewP1"
        android:layout_toRightOf="@+id/textViewCategory"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewScoreP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewP2"
        android:layout_alignLeft="@+id/textViewScoreP1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewP2"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonEraser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/buttonPencil"
        android:background="@android:drawable/btn_default"
        android:onClick="onEraser"
        android:text="@string/button_eraser" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:text="@string/text_category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <edu.msu.scrabble.project1.DrawingView
        android:id="@+id/drawingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBarPencil"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonColor"
        android:background="@color/white" />

    <SeekBar
        android:id="@+id/seekBarPencil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonPencil"
        android:layout_alignLeft="@+id/seekBarEraser"
        android:layout_toLeftOf="@+id/buttonDone"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/buttonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textViewCategory"
        android:layout_below="@+id/textViewCategory"
        android:background="@android:drawable/btn_default"
        android:onClick="onColor"
        android:text="@string/button_color" />

    <TextView
        android:id="@+id/textViewP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewScoreP2"
        android:layout_toLeftOf="@+id/buttonDone"
        android:paddingBottom="15dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:text="@string/text_scoreP1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewScoreP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewP2"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textViewP2"
        android:paddingBottom="5dp"
        android:paddingTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCategory"
        android:layout_toLeftOf="@+id/buttonDone"
        android:paddingBottom="15dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:text="@string/text_scoreP2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>